turtleart.square.Square.scala.error
Compilation error:
Square:1: error: method Tarrizo overrides nothing
override def Tarrizo() {
             ^